[package]
name = "riwaq"
version = "0.1.0"
description = "wasm runtime OS for web server"
authors = ["Mohamed Dardouri <med@dardouri.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sawi-app/riwaq.git"

[workspace]
members = [
    ".",
    "types",
]

[dependencies]
riwaq-macro = { path = "../riwaq-macro" }
tokio = { version = "1", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
